--- a/tools/ChangeLog
+++ b/tools/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-30  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* tools.gpr:
+	Remove xmlada dependency.
+	Remove use of Shared.LIB_XMLADA.
+	Update copyright notice.
+
 	* makefile:
 	(.SILENT): Simplify.
 	(GEN): New variable.
