--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-31  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* demos.gpr:
+	(Ide): Added (renaming from Shared.Ide).
+
 2004-01-30  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* demos.gpr:
