--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,16 @@
+2004-01-31  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(RT_STD): Add sessions4.
+
+	* regtests.gpr:
+	(Languages): Add.
+	(Compiler): Do not import the Shared one, we want only partial
+	 style checks on the regtest module.
+
+	* sessions4.adb, sessions4.out:
+	Initial revision.
+
 2004-01-28  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* eres.adb, sock2.adb:
