--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2004-02-02  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-resources.ads, aws-resources.adb,
+	  aws-resources-files.ads, aws-resources-files.adb,
+	  aws-resources-embedded.ads, aws-resources-embedded.adb:
+	Remove DOS CR at end of line.
+
 2004-01-31  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-session.adb:
