--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-08  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-server-protocol_handler.adb:
+	(Get_File_Data): Fix routine body header.
+
 2004-02-07  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* templates_parser.adb:
