--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,12 @@
+2004-03-02  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(SOURCES): Remove aws-services-files.adb.
+
+	* aws-services-files.ads, aws-services-files.adb:
+	Removed. The features offered by this API is now part of AWS
+	 standard reponses.
+
 2004-03-04  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net-sets.adb:
