--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2004-03-03  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* aws-net-sets.adb:
+        (Remove_Socket): Use local Free routine.
+         Fixing memory damage detected in Linux.
+	(Delete_Socket): Removed. Use code directly.
+
 2004-03-02  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
