--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-03  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-net-sets-thin.ads:
+	(Poll): Add parameter mode. Fix casing.
+        Remove obsolete comments.
+
 2004-03-03  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* aws-net-sets.adb:
