--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,5 +1,9 @@
 2004-03-03  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* src.gpr:
+	(Source_Dirs): Add ../win32 on Windows based OS.
+	Add some comments.
+	
 	* aws-net-sets-thin.ads:
 	(Poll): Add parameter mode. Fix casing.
         Remove obsolete comments.
