--- a/lib/ChangeLog
+++ b/lib/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-03  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* makefile:
+	(clean): Add *.o
+
 2003-10-12  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
