--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,7 +1,7 @@
 2004-03-03  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* makefile:
-	Add aws-net.sets.adb to the file list.
+	Add aws-net-sets.adb to the file list.
 
 2004-03-03  Pascal Obry  <p.obry@wanadoo.fr>
 
