--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -13,6 +13,10 @@
 	Add ../lib/poll.o to the linker.
 	Add wait.adb regression test.
 
+	* sock2.adb:
+	Fix copyright years.
+	Fix typo in comments.
+
 2004-03-03  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* wait.adb, wait.out:
