--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-19  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* aws-response.adb:
+	Minor typo fix.
+
 2004-03-17  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* aws-url.adb:
