--- a/demos/ChangeLog
+++ b/demos/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-19  Dmitriy Anisimkov <anisimkov@yahoo.com>
+
+	* agent.adb:
+	Use message stream to support large responses.
+
 2004-03-19  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* agent.adb:
