--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-21  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* upload2.adb:
+	Another attempt to ensure stable regtest output.
+
 2004-03-19  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
