--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-22  Pascal Obry  <p.obry@wanadoo.fr>
 
+	* wsdl_7_main.adb:
+	Update to use the generated CB and Server services.
+
+2004-03-22  Pascal Obry  <p.obry@wanadoo.fr>
+
 	* makefile:
 	(RT_SOAP_ASIS): Add wsdl_7.
 	(init): Redirect some output to /dev/null.
