--- a/ssl/ChangeLog
+++ b/ssl/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-23  Dmitriy Anisimkov  <anisimkov@yahoo.com>
+
+	* ssl-thin.ads:
+	(SSL_ERROR_*): New constants.
+	(SSL_get_error): New routine.
+
 2004-03-10  Dmitriy Anisimkov  <anisimkov@yahoo.com>
 
 	* ssl-thin.ads, ssl-wrappers.ads, ssl-wrappers.adb:
