--- a/regtests/ChangeLog
+++ b/regtests/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-23  Pascal Obry  <p.obry@wanadoo.fr>
+
+	* ssock2.adb:
+	Fix copyright notice.
+
 2004-03-23  Dmitriy Anisimkov <anisimkov@yahoo.com>
 
 	* ssock2.adb, ssock2.out, makefile:
